assert-struct/tests/snapshots/multiple_failures__mixed_level_failures.snap
---
source: assert-struct/tests/multiple_failures.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/multiple_failures_errors/mixed_level_failures.rs:33:14
   |
33 |         age: 30,  // Line 32 - root level failure (25 != 30)
   |              ^^ got 25
...
37 |             city: "Shelbyville",  // Line 36 - nested failure
   |                   ^^^^^^^^^^^^^ got "Springfield"
